# Macrotrade-pyspark

./: .gitignore  Dockerfile  README.md  pyproject.toml
astro/: Dockerfile
astro/dags/: pipyjobairflow.py  referenceTables_ingest_dag.py  worldshareCommodityMonthly copy.py  worldshareCommodityMonthly.py
comtrade_parquet/ais_countriesareas/: .part-00004-6f85437d-b857-40d3-98db-0dfdfa1dbc08-c000.snappy.parquet.crc  .part-00007-6f85437d-b857-40d3-98db-0dfdfa1dbc08-c000.snappy.parquet.crc  part-00007-6f85437d-b857-40d3-98db-0dfdfa1dbc08-c000.snappy.parquet
comtrade_parquet/ais_dataitems/: .part-00001-432b82b9-e623-4b24-9161-4585d090db91-c000.snappy.parquet.crc  part-00004-432b82b9-e623-4b24-9161-4585d090db91-c000.snappy.parquet  part-00005-432b82b9-e623-4b24-9161-4585d090db91-c000.snappy.parquet
comtrade_parquet/ais_flows/: .part-00000-830a341b-1db4-4193-942a-39d81bbc4f58-c000.snappy.parquet.crc  .part-00007-830a341b-1db4-4193-942a-39d81bbc4f58-c000.snappy.parquet.crc  part-00000-830a341b-1db4-4193-942a-39d81bbc4f58-c000.snappy.parquet  part-00003-830a341b-1db4-4193-942a-39d81bbc4f58-c000.snappy.parquet
comtrade_parquet/ais_vesseltypes/: .part-00007-ae34be96-8033-491c-b6d7-43c15189333e-c000.snappy.parquet.crc  part-00002-ae34be96-8033-491c-b6d7-43c15189333e-c000.snappy.parquet  part-00004-ae34be96-8033-491c-b6d7-43c15189333e-c000.snappy.parquet  (+1 more)
data_transformations/: Comtrade_Reference.py
docs/: metadata_ingestion.md
jobs/: getDAJob-Public.py  getDAJob.py  getDATarifflineJob.py  getJob.py  getMetadataCommoditiesAnnual.py  getMetadataCommoditiesMonthly.py  getMetadataServicesAnnual.py  getWorldShareAnnual.py  getWorldShareCommoditiesAnnual.py  getWorldShareCommoditiesMonthly.py  getWorldShareMonthly.py  getWorldShareServicesAnnual.py  getWorldShareServicesMonthly.py  referenceList_ingest.py  referenceTables_ingest.py
(+569 files in other folders)
